--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Creed Search</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">    
