--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <body>
     <h1>CREED SEARCH</h1>
     <form id="search-form">
-      <label>Search for</label>
+      <label>Search for:</label>
       <input id="search-text" type="text" value="Example text" onfocus="if(this.value == 'Example text') {this.value=''}" onblur="if(this.value == ''){this.value ='Example text'}"/>
       <label>in</label>
       <input id="search-site" type="text" value="www.example.com" onfocus="if(this.value == 'www.example.com') {this.value=''}" onblur="if(this.value == ''){this.value ='www.example.com'}"/>
-      <input type="submit" value="Search"/>
+      <input type="submit" value="Go"/>
     </form>
   </body>
 </html>
