Implementing crawing engine

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
   </head>
-  <body>
-    <h1>CREED SEARCH</h1>
+  <body id="main-page">
+    <h1>CREED</h1>
     <form id="search-form">
       <label>Search for:</label>
       <input id="search-text" type="text" value="Example text" onfocus="if(this.value == 'Example text') {this.value=''}" onblur="if(this.value == ''){this.value ='Example text'}"/>
