--- a/message.html
+++ b/message.html
@@ -13,8 +13,8 @@
     <body id="info-page">
       <h1>CREED</h1>
       <div class="container">
-        <h5>Сайта не може да бъде достъпен</h5>
-        <a href="#">Обратно към търсачката</a>
+        <h5>{{.}}</h5>
+        <a href="/">Обратно към търсачката</a>
       </div>
     </body>
   </html>
