--- a/search_results.html
+++ b/search_results.html
@@ -13,7 +13,7 @@
     <body id="search-results">
       <h1>CREED</h1>
       <div class="container">
-        <h5>Страници в {{.Address}} които съдържат "Георги Николаев" :</h5>
+        <h5>Страници в {{.Address}} които съдържат "Exmaple text" :</h5>
         <hr/> 
         <ul>
             {{range .Pages}}
